--- a/pom.xml
+++ b/pom.xml
@@ -23,10 +23,10 @@
             <version>42.2.5</version>
         </dependency>
         <dependency>
-            <groupId>org.javatuples</groupId>
-            <artifactId>javatuples</artifactId>
-            <version>1.2</version>
-        </dependency>
+         <groupId>org.jxls</groupId>
+                  <artifactId>jxls-poi</artifactId>
+                  <version>2.6.0-rc1</version>
+         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
