--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.3.RELEASE</version>
     </parent>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -24,8 +25,8 @@
         </dependency>
         <dependency>
             <groupId>org.jxls</groupId>
-            <artifactId>jxls-poi</artifactId>
-            <version>1.2.0</version>
+            <artifactId>jxls</artifactId>
+            <version>2.6.0</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -45,17 +46,11 @@
             <version>5.3.1</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.5</version>
-        </dependency>
     </dependencies>
 
     <properties>
         <java.version>11</java.version>
     </properties>
-
 
     <build>
         <plugins>
@@ -65,6 +60,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
