--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,16 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.josmer</groupId>
-    <artifactId>app</artifactId>
+    <groupId>de.josmer.dwdcdc</groupId>
+    <artifactId>dwdcdc-app</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <repositories>
+        <repository>
+            <id>myMavenRepoRead</id>
+            <url>https://mymavenrepo.com/repo/SobmqS55xSNYxkhIqZPi/</url>
+        </repository>
+    </repositories>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -15,6 +22,13 @@
     </parent>
 
     <dependencies>
+        <!-- https://github.com/fantasy2113/dwdcdc-library -->
+        <dependency>
+            <groupId>de.josmer.dwdcdc</groupId>
+            <artifactId>dwdcdc-library</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
