--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-.idea/
-.settings/
-.vscode/
+.idea/libraries/
+.idea/sonarlint/
+.idea/workspace.xml
+.idea/uiDesigner.xml
 target/
 *.asc
 *.zip
 *.log
-dwdcdc-app.iml
-.project
-.classpath
