--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,13 @@
-########################################################
-# creates postgres sql database image and pgadmin4 image
-# login db: postgres:postgres hostname: postgres
-# login pgadmin: admin@developer-blog.net:admin port 5555
-########################################################
 version: '3'
 services:
   postgres:
     image: postgres
-    hostname: postgres
-    # if you need to connect from outside, comment this in:
-    #    ports:
-    #      - 5432:5432
+    ports:
+      - 5432:5432
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: testdb
+      POSTGRES_DB: db
     volumes:
       - postgres-data:/var/lib/postgresql/data
     restart: unless-stopped
@@ -26,7 +19,7 @@ services:
     ports:
       - 5555:80
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@developer-blog.net
+      PGADMIN_DEFAULT_EMAIL: admin
       PGADMIN_DEFAULT_PASSWORD: admin
     restart: unless-stopped
 
