--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.open-in-view=false
+spring.flyway.baselineOnMigrate=true
+flyway.url=${JDBC_DATABASE_URL}
+flyway.schemas=db
+flyway.user=${JDBC_DATABASE_USERNAME}
+flyway.password=${JDBC_DATABASE_PASSWORD}
