--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/db?user=postgres&password=postgres}
+spring.datasource.username=${JDBC_DATABASE_USERNAME:postgres}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD:postgres}
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.open-in-view=false
-flyway.url=${JDBC_DATABASE_URL}
+flyway.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/db?user=postgres&password=postgres}
 flyway.schemas=db
-flyway.user=${JDBC_DATABASE_USERNAME}
-flyway.password=${JDBC_DATABASE_PASSWORD}
+flyway.user=${JDBC_DATABASE_USERNAME:postgres}
+flyway.password=${JDBC_DATABASE_PASSWORD:postgres}
